Added Denis' 2nd round of comments

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1006,4 +1006,61 @@ author={
     Xiaoqiang~Zheng},
   year={2015},
 }
+@article{PhysRevLett.115.072001,
+  title = {Observation of $J\psi$ Resonances Consistent with Pentaquark States in ${\mathrm{\Lambda}}_{b}^{0}\rightarrow J\psi{K}^{-}p$ Decays},
+  author = {Aaij, R. and others },
+  collaboration = {LHCb Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {115},
+  issue = {7},
+  pages = {072001},
+  numpages = {15},
+  year = {2015},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.115.072001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.072001}
+}
+
+@article{Glashow:1961tr,
+      author         = "Glashow, S. L.",
+      title          = "{Partial Symmetries of Weak Interactions}",
+      journal        = "Nucl. Phys.",
+      volume         = "22",
+      year           = "1961",
+      pages          = "579-588",
+      doi            = "10.1016/0029-5582(61)90469-2",
+      SLACcitation   = "%%CITATION = NUPHA,22,579;%%"
+}
+@article{PhysRevLett.19.1264,
+  title = {A Model of Leptons},
+  author = {Weinberg, Steven},
+  journal = {Phys. Rev. Lett.},
+  volume = {19},
+  issue = {21},
+  pages = {1264--1266},
+  numpages = {0},
+  year = {1967},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.19.1264},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+}
+@InProceedings{salam,
+  author       = {Salam, Abdus},
+  editor       = {Svartholm, Nils},
+  title        = {Weak and Electromagnetic Interactions},
+  date         = 1968,
+  booktitle    = {Elementary particle theory},
+  booksubtitle = {Relativistic groups and analyticity},
+  booktitleaddon= {Proceedings of the Eighth {Nobel} Symposium},
+  eventdate    = {1968-05-19/1968-05-25},
+  venue        = {Aspen{\"a}sgarden, Lerum},
+  publisher    = {Almquist \& Wiksell},
+  location     = {Stockholm},
+  pages        = {367-377},
+}
+
+
+
 
