--- a/data/section3.tex
+++ b/data/section3.tex
@@ -28,7 +28,7 @@ Within the ring, protons are accelerated to a speed close to that of light and m
 
 ATLAS and CMS are two general-purpose particle detectors located at opposite sides on the LHC ring. These are "onion-type" detectors in the sense that their general layout surrounds the interaction point with sub-detector systems aimed to measure a specific property of the particle to be detected.
 
-The other two detectors, ALICE and LHCb are designed for specific purposes, like studying heavy-ion collisions and performing precision measurements of CP-violation and the physics of B-mesons, respectively. For this study we are going use data collected by the CMS experiment.
+The other two detectors, ALICE and LHCb are designed for specific purposes, like studying heavy-ion collisions and performing precision measurements of CP-violation and the physics of B-mesons, respectively. For this study, data collected by the CMS experiment is used.
 
  \begin{figure}[H]
  	\centering
@@ -64,7 +64,7 @@ The layout of the detector can be seen in Figure \ref{fig:cmsdia}. The following
 
  \subsection{Coordinate System}
 
- The CMS experiment uses a right-handed coordinate system, with the origin at the nominal collision point, the $x$-axis pointing to the center of the LHC ring, the $y$-axis pointing up (perpendicular to the LHC plane), and the $z$-axis along the anticlockwise beam direction. The polar angle $\theta$ is measured from the positive $z-axis$ and the azimuthal angle $\phi$ is measured from the positive $x$-axis in the $x-y$ plane. The radius $r$ denotes the distance from the $z$-axis and the pseudorapidity $\eta$ is defined as $\eta=-log[tan(\theta \ 2)]$. $\eta$ is preferently used by particle physicists to measure forward-ness of particles in the detector since any differences in this coordinate are invariant under boosts in the $z-$direction and particle production is roughly uniform in $\eta$. See Figure \ref{fig:cmscor} for reference.
+ The CMS experiment uses a right-handed coordinate system, with the origin at the nominal collision point, the $x$-axis pointing to the center of the LHC ring, the $y$-axis pointing up (perpendicular to the LHC plane), and the $z$-axis along the anticlockwise beam direction. The polar angle $\theta$ is measured from the positive $z-axis$ and the azimuthal angle $\phi$ is measured from the positive $x$-axis in the $x-y$ plane. The radius $r$ denotes the distance from the $z$-axis and the pseudorapidity $\eta$ is defined as $\eta=-log[tan(\theta \ 2)]$. $\eta$ is preferently used by CMS particle physicists to measure forward-ness of relativistic particles in the detector since any differences in this coordinate are invariant under boosts in the $z-$direction and particle production is roughly uniform in $\eta$. See Figure \ref{fig:cmscor} for reference.
 
   \begin{figure}[H]
  	\centering
@@ -87,7 +87,7 @@ The layout of the detector can be seen in Figure \ref{fig:cmsdia}. The following
  	\label{fig:cmstracker}
  \end{figure}
 
-The pixel detector is made up of three barrel layers, called BPIX, and two endcap layers called the FPIX. The BPIX contains 48 million pixels and the FPIX contains another 18 million pixels. In totral it consists of 1440 hybrid silicon detector modules, each with a dimension of $100 \times 150 \mu m^{2}$. The small pixel size enables track resolutions of 10$\mu m$ in the transverse plane and 20$\mu m$ in the $z$-direction. The pixel detector is what gives CMS its excellent secondary vertex tagging ability in addition to producing seed tracks for the strip tracker and the high level trigger (HLT).
+The pixel detector is made up of three barrel layers, called BPIX, and two endcap layers called the FPIX. The BPIX contains 48 million pixels and the FPIX contains another 18 million pixels. In total it consists of 1440 hybrid silicon detector modules, each with a dimension of $100 \times 150 \mu m^{2}$. The small pixel size enables track resolutions of 10$\mu m$ in the transverse plane and 20$\mu m$ in the $z$-direction. The pixel detector is what gives CMS its excellent secondary vertex tagging ability in addition to producing seed tracks for the strip tracker and the high level trigger (HLT).
 
 Likewise, the silicon strip detector is made up of four subsystems. The Tracker Inner Barrel (TIB) has four layers of 320 $\mu m$ strips. At each end of the TIB is a three-layer Tracker Inner Disks (TID), which contains strips of the same thickness. The Tracker Outer Barrel (TOB) is the six layer system which surrounds the TIB/TID. The first four layers of the TOB use 500$\mu m$ thick strips, and the last two layers use 122 $\mu m$ thick strips. The Tracker EndCaps (TEC) are on either side of the previous setup and contain nine disks with up to seven layers of strips. These strips are 320 $\mu m$ thick in the inner four rings and 500 $\mu m$ in the outer three rings. In total, the strip detector contains 9.3 million silicon strips.
 
@@ -131,7 +131,7 @@ The intrinsic energy resolution ($\sigma$) of the ECAL barrel was measured with 
  	\label{fig:cmshcal}
 	 \end{figure}
 
-Combined, the ECAL and HCAL can measure the energy deposited by a charged pion with a resolution of $\sigma/E\approx100\%/\sqrt{E[GeV]}\oplus5\%$ \cite{Yazgan_2009}.
+Combined, the ECAL and HCAL can measure the energy deposited by a charged pion with a resolution of $\sigma/E\approx100\%/\sqrt{E[GeV]}\oplus5\%$ \cite{Yazgan_2009}, assuming an average jet particle composition.
 
  \subsection{Solenoid}
 
