Corrections to Section 4

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1061,6 +1061,111 @@ author={
   pages        = {367-377},
 }
 
+@MISC{jetCMS,
+    author = {Quantum Diaries Blog},
+    title = {Jets at CMS},
+    year = {2010},
+    note = {[Online; accessed June 27, 2019},
+    howpublished = "\url{https://www.quantumdiaries.org/2011/06/01/anatomy-of-a-jet-in-cms/}"
+} 
 
+@misc{JetEnergyResolutionTwiki,
+      collaboration        = "CMS",
+      title         = "{Jet Energy Resolution}",
+      year          = "2017",
+      howpublished  = "\url{https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetResolution}",
+}
 
+@article{Martin:2009iq,
+      author         = "Martin, A. D. and Stirling, W. J. and Thorne, R. S. and
+                        Watt, G.",
+      title          = "{Parton distributions for the LHC}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C63",
+      year           = "2009",
+      pages          = "189-285",
+      doi            = "10.1140/epjc/s10052-009-1072-5",
+      eprint         = "0901.0002",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-08-95, DCPT-08-190, CAVENDISH-HEP-08-16",
+      SLACcitation   = "%%CITATION = ARXIV:0901.0002;%%"
+}
 
+@article{Altarelli:1977zs,
+      author         = "Altarelli, Guido and Parisi, G.",
+      title          = "{Asymptotic Freedom in Parton Language}",
+      journal        = "Nucl. Phys.",
+      volume         = "B126",
+      year           = "1977",
+      pages          = "298-318",
+      doi            = "10.1016/0550-3213(77)90384-4",
+      reportNumber   = "LPTENS-77-6",
+      SLACcitation   = "%%CITATION = NUPHA,B126,298;%%"
+}
+
+@article{ANDERSSON198331,
+title = "Parton fragmentation and string dynamics",
+journal = "Physics Reports",
+volume = "97",
+number = "2",
+pages = "31 - 145",
+year = "1983",
+issn = "0370-1573",
+doi = "https://doi.org/10.1016/0370-1573(83)90080-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370157383900807",
+author = "B. Andersson and G. Gustafson and G. Ingelman and T. Sjöstrand"
+}
+
+@article{Sjostrand:2014zea,
+      author         = "Sjöstrand, Torbjörn and Ask, Stefan and Christiansen,
+                        Jesper R. and Corke, Richard and Desai, Nishita and Ilten,
+                        Philip and Mrenna, Stephen and Prestel, Stefan and
+                        Rasmussen, Christine O. and Skands, Peter Z.",
+      title          = "{An Introduction to PYTHIA 8.2}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "191",
+      year           = "2015",
+      pages          = "159-177",
+      doi            = "10.1016/j.cpc.2015.01.024",
+      eprint         = "1410.3012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LU-TP-14-36, MCNET-14-22, CERN-PH-TH-2014-190,
+                        FERMILAB-PUB-14-316-CD, DESY-14-178, SLAC-PUB-16122",
+      SLACcitation   = "%%CITATION = ARXIV:1410.3012;%%"
+}
+
+@article{Alwall:1647049,
+      author        = "Alwall, Johan and Duhr, Claude and Fuks, Benjamin and
+                       Mattelaer, Olivier and Öztürk, Deniz Gizem and Shen,
+                       Chia-Hsien",
+      title         = "{Computing decay rates for new physics theories with
+                       FeynRules  and MadGraph 5 _aMC@NLO}",
+      journal       = "Comput. Phys. Commun.",
+      number        = "arXiv:1402.1178. CERN-PH-TH-2014-020. MCNET-14-03.
+                       IPPP-14-10. DCPT-14-20. CP3-14-11. CALT 68-2877. ZU-TH
+                       02-14",
+      volume        = "197",
+      pages         = "312-323. 29 p",
+      month         = "Feb",
+      year          = "2014",
+      reportNumber  = "arXiv:1402.1178",
+      url           = "https://cds.cern.ch/record/1647049",
+      note          = "Comments: 29 pages, 2 figures",
+      doi           = "10.1016/j.cpc.2015.08.031",
+}
+
+@article{geant4sim,
+      title   = "Geant4 a simulation toolkit",
+      journal = "Nucl. Instrum. Meth. A",
+      volume  = "506",
+      number  = "3",
+      pages   = "250 - 303",
+      year    = "2003",
+      note    = "",
+      issn    = "0168-9002",
+      doi     = "10.1016/S0168-9002(03)01368-8",
+      url     = "http://www.sciencedirect.com/science/article/pii/S0168900203013688",
+      author  = "S. Agostinelli and others",
+}
