--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1141,7 +1141,7 @@ author = "B. Andersson and G. Gustafson and G. Ingelman and T. Sjöstrand"
                        Mattelaer, Olivier and Öztürk, Deniz Gizem and Shen,
                        Chia-Hsien",
       title         = "{Computing decay rates for new physics theories with
-                       FeynRules  and MadGraph 5 _aMC@NLO}",
+                       FeynRules  and MadGraph 5}",
       journal       = "Comput. Phys. Commun.",
       number        = "arXiv:1402.1178. CERN-PH-TH-2014-020. MCNET-14-03.
                        IPPP-14-10. DCPT-14-20. CP3-14-11. CALT 68-2877. ZU-TH
