--- a/data/section2.tex
+++ b/data/section2.tex
@@ -780,9 +780,9 @@ The relevant final states at the LHC are dimuon or di-$b$ resonances. The cross 
 
 where $k$ contains the $s$-quark PDF effect since the production of Z' may occur through $bs$ fusion.
 
-For this analysis, we consider the special case when the Z' is associated with two $b$-jets coming from gluon splitting (a process we will refer to as Bottom Fermion fusion (BFF) (see Figure \ref{fig:bff})) and has a di-$b$ jet final state.
+For this analysis, the special case when the Z' is associated with two $b$-jets coming from gluon splitting (a process we will refer to as Bottom Fermion fusion (BFF) (see Figure \ref{fig:bff}))and has a di-$b$ jet final state is considered.
 
- \begin{figure}[H]
+ \begin{figure}[h]
  	\centering
  	\includegraphics[width=0.5\textwidth]{figures/bff.png}
  	\singlespace
@@ -794,15 +794,16 @@ For this analysis, we consider the special case when the Z' is associated with t
 %In our case, a possible explanation to the B-decay anomalies could postulate the existence of a new heavy neutral gauge boson, the Z'. Such a particle would couple to $b-s$ quarks and non-universally to leptons. In addition, it would be assumed to couple mostly to third generation quarks to explain why it has not been seen yet by any experiment.
 %Basic properties/ Feynman diagram
 \subsection{Flavour-violating coupling $\delta_{bs}$}
-In order to provide an explanation for B-decay anomalies, we need to consider the flavour-violating coupling $\delta_{bs}$. Allowing the Z' boson to couple to $s$ quarks in addition to $b$ quarks results in two times more ways to produce the Z' and two times more ways for it to decay. A non-zero $\delta_{bs}$ will allow the Z's to be produced by $b$ and $\bar{s}$ quarks (in addition to $b\bar{b}$ ones) and this significantly enhances the production cross section since the PDF for the $s$ quark is significantly higher than that for the $b$ quark at the LHC, as we can see from Figure \ref{fig:pdfs}.
 
- \begin{figure}[H]
+\begin{figure}[h]
  	\centering
  	\includegraphics[width=0.6\textwidth]{figures/pdfs.png}
  	\singlespace
  	\caption{PDF for the LHC Run II. Reprinted from \cite{Ball:2014uwa}.}
- 	\label{fig:pdfs}
+ 	\label{fig:pdfs1}
  \end{figure}
+
+In order to provide an explanation for B-decay anomalies, we need to consider the flavour-violating coupling $\delta_{bs}$. Allowing the Z' boson to couple to $s$ quarks in addition to $b$ quarks results in two times more ways to produce the Z' and two times more ways for it to decay. A non-zero $\delta_{bs}$ will allow the Z's to be produced by $b$ and $\bar{s}$ quarks (in addition to $b\bar{b}$ ones) and this significantly enhances the production cross section since the PDF for the $s$ quark is significantly higher than that for the $b$ quark at the LHC, as we can see from Figure \ref{fig:pdfs1}.
 
 Also, we can see from Equation \ref{crossb} and \ref{crossmu} that when $\delta_{bs}$ goes to zero, the flavor conserving contribution dominates the production of Z'. Likewise, when $\delta_{bs}$ is large but still satisfies the $B$ anomalies (so smaller $g_{b}$) the flavour violating contribution dominates.
 
